# redquill

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  Should-Have.txt  TO-DO.txt
.cargo-husky/hooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
docs/: annotation-format.md  config-layer.md  example-config.toml  forge-setup.md  maintainability-audit-2026-07-11.md
docs/specs/: 03-spec-branch-worktree-switcher.md  04-spec-commit-staged.md
src/: lib.rs  main.rs
src/annotate/: markdown.rs  mod.rs  model.rs  persist.rs  store.rs
src/config/: keys.rs  keys_tests.rs  load.rs  load_tests.rs  mod.rs  mod_tests.rs
src/diff/: error.rs  file.rs  hunk.rs  line.rs  mod.rs  model.rs  nav.rs  word.rs
src/forge/: detect.rs  detect_tests.rs  diagnose.rs  diagnose_tests.rs  github.rs  github_tests.rs  gitlab.rs  gitlab_tests.rs  mod.rs  mod_tests.rs  process.rs  remote_url.rs  remote_url_tests.rs  submit.rs  submit_tests.rs  threads.rs  threads_tests.rs
src/git/: branch.rs  commit.rs  diff.rs  error.rs  log.rs  ls_files.rs  mod.rs  remote.rs  runner.rs  stage.rs  stash.rs  status.rs  worktree.rs
src/highlight/: engine.rs  lang.rs  mod.rs  token_kind.rs
src/lsp/: codec.rs  config.rs  event.rs  manager.rs  mod.rs  protocol.rs  transport.rs
src/review/: cleanup.rs  cleanup_tests.rs  mod.rs  model.rs  reconcile.rs  store.rs
src/search/: engine.rs  engine_perf_tests.rs  engine_tests.rs  files.rs  fuzzy.rs  mod.rs  query.rs
src/ui/: annotation_list.rs  annotation_overlap.rs  annotation_overlap_tests.rs  app.rs  app_tests.rs  background.rs  cleanup_integration_tests.rs  cleanup_reviews.rs  cleanup_reviews_modal.rs  cleanup_reviews_tests.rs  code_intel.rs  command_log.rs  commit_integration_tests.rs  commit_message.rs  commit_modal.rs  compose.rs  compose_modal.rs  confirm_remote_op.rs  confirm_remote_op_modal.rs  diff_view.rs  diff_view_state.rs  diff_wrap.rs  draft_reply.rs  editor.rs  editor_tests.rs  end_review.rs  end_review_modal.rs  file_finder.rs  file_finder_integration_tests.rs  file_finder_modal.rs  file_tree.rs  file_view.rs  footer.rs  footer_tests.rs  forge_submit.rs  forge_submit_tests.rs  (+64 more)
tests/: cli_review_integration.rs  diff_integration.rs  git_integration.rs  git_log_integration.rs  git_ls_files_integration.rs  git_pr_fetch_integration.rs  git_remote_integration.rs  git_review_integration.rs  git_stage_integration.rs  git_worktree_integration.rs  lsp_integration.rs
(+93 files in other folders)
