[package]
name = "redquill"
version = "0.12.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
grep-matcher = "0.1.8"
grep-regex = "0.1.14"
grep-searcher = { version = "0.1.16", default-features = false }
ignore = { version = "0.4.28", default-features = false }
lsp-types = "0.97"
nucleo-matcher = { version = "0.3.1", default-features = false, features = ["unicode-casefold", "unicode-normalization"] }
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm"] }
serde = "1"
serde_json = "1"
thiserror = "2"
tree-sitter = { version = "0.26.10", default-features = false, features = ["std"] }
tree-sitter-bash = "0.25.1"
tree-sitter-go = "0.25.0"
tree-sitter-highlight = "0.26.10"
tree-sitter-javascript = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-md = "0.5.3"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-yaml = "0.7.2"
toml = { version = "1", default-features = false, features = ["parse", "std", "serde"] }
arboard = { version = "3.6.1", default-features = false }

[dev-dependencies]
tempfile = "3"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
